-figured out how to access the trivia api -work begins on layouting using boostrap

--- a/index.html
+++ b/index.html
@@ -12,11 +12,20 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <link href="./assets/css/style.css" rel="stylesheet">
     <title>Trivia</title>
 </head>
 
 <body>
     <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-lg-8">
+                <h1>Trivia Game</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 col-lg-8 currentQuestion">Current Question</div>
+        </div>
         <!-- Header: Triva Name -->
 
         <!-- <current questioin> You'll create a trivia game that shows only one question 
