-added divs for timer and current question to index.html -added background picture image file -added more js code for timer, click event, etc

--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-lg-8">
-                <h1>Trivia Game</h1>
+                <h1>Mythology Trivia</h1>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-12 col-lg-8 currentQuestion">Current Question</div>
+            <div class="col-sm-12 col-lg-8 timer">Click Here to Start the Trivia!</div>
+            <div class="col-sm-12 col-lg-8 mx-auto currentQuestion"></div>
+        </div>
+        <div class="row">
+            <div class="col-12 feedback"></div>
         </div>
         <!-- Header: Triva Name -->
 
