-created auto-creation question DOM elements via js -coding the logic to create the randomized answers array/elementsf

--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-12 col-lg-8 timer">Click Here to Start the Trivia!</div>
-            <div class="col-sm-12 col-lg-8 mx-auto currentQuestion"></div>
+            <div class="col-sm-12 col-lg-8 timer">Click Here to Start</div>
+            <div class="col-sm-12 col-lg-8 mx-auto py-3 currentQuestion">current question</div>
         </div>
         <div class="row">
-            <div class="col-12 feedback"></div>
+            <div class="answers">
+                <!-- <div class="col-12 answer">test</div>
+                <div class="col-12 answer">test</div>
+                <div class="col-12 answer">test</div>
+                <div class="col-12 answer">test</div> -->
+            </div>
         </div>
         <!-- Header: Triva Name -->
 
