-finally got button clicking to work.. I don't know how this was boostrap's fault, but I'll find some way to blame this on it.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
         </div>
         <div class="row">
             <div class="answers">
+                <div class="answer0 btn btn-primary btn-lg btn-block p-2 m-1">Press Start</div>
+                <div class="answer1 btn btn-primary btn-lg btn-block p-2 m-1">Press Start</div>
+                <div class="answer2 btn btn-primary btn-lg btn-block p-2 m-1">Press Start</div>
+                <div class="answer3 btn btn-primary btn-lg btn-block p-2 m-1">Press Start</div>
                 <!-- <div class="col-12 answer">test</div>
-                <div class="col-12 answer">test</div>
                 <div class="col-12 answer">test</div>
                 <div class="col-12 answer">test</div> -->
             </div>
