--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
                 <div class="col-12 answer">test</div> -->
             </div>
         </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="row">
+                <div class="correctAnswers col-6 p-2 m-1">
+                    <p>Correct Answers:</p>
+                </div>
+                <div class="incorrectAnswers col-6 p-2 m-1">
+                    <p>Incorrect Answers:</p>
+                </div>
+            </div>
+            </div>
+        </div>
         <!-- Header: Triva Name -->
 
         <!-- <current questioin> You'll create a trivia game that shows only one question 
