-implemented auto-next-question-on-timer-expiration functionality

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <div class="col-12">
                 <div class="row">
                 <div class="correctAnswers col-6 p-2 m-1">
-                    <p>Correct Answers:</p>
+                    <p>Correct Answers: 0</p>
                 </div>
                 <div class="incorrectAnswers col-6 p-2 m-1">
-                    <p>Incorrect Answers:</p>
+                    <p>Incorrect Answers: 0</p>
                 </div>
             </div>
             </div>
