-implemented restart button upon game finish

--- a/index.html
+++ b/index.html
@@ -19,29 +19,26 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-sm-12 col-lg-8">
+            <div class="col">
                 <h1>Mythology Trivia</h1>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12 col-lg-8 timer">Click Here to Start</div>
-            <div class="col-sm-12 col-lg-8 mx-auto py-3 currentQuestion">current question</div>
+            <div class="timer col p-2 m-2">Click Here to Start</div>
+            <div class="col-12 mx-auto m-3 p-3 currentQuestion">current question</div>
         </div>
         <div class="row">
             <div class="answers">
-
             </div>
         </div>
         <div class="row">
             <div class="col-12">
                 <div class="row">
-                <div class="correctAnswers col-6 p-2 m-1">
-                    <p>Correct Answers: 0</p>
+                    <div class="correctAnswers col p-3 m-1">
+                        <p>Correct Answers: 0</p>
+                    </div>
+                    <div class="incorrectAnswers col p-3 m-1">
+                        <p>Incorrect Answers: 0</p>
+                    </div>
                 </div>
-                <div class="incorrectAnswers col-6 p-2 m-1">
-                    <p>Incorrect Answers: 0</p>
-                </div>
-            </div>
             </div>
         </div>
         <!-- Header: Triva Name -->
