-themed picture added to game background

--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>Mythology Trivia</h1>
+                <h1 class="title">Mythology Trivia</h1>
             </div>
-            <div class="timer col p-2 m-2">Click Here to Start</div>
-            <div class="col-12 mx-auto m-3 p-3 currentQuestion">current question</div>
+        </div>
+        <div class="row">
+            <div class="timer mx-auto col p-3 m-3">Click Here to Start</div>
+        </div>
+        <div class="row">
+            <div class="col mx-auto m-3 p-3 currentQuestion">current question</div>
         </div>
         <div class="row">
             <div class="answers">
